change some features

--- a/app/app/src/main/res/layout/fragment_stock_search.xml
+++ b/app/app/src/main/res/layout/fragment_stock_search.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -51,7 +52,7 @@
                 android:alpha="0.5"
                 android:padding="5dp"
                 android:src="@drawable/ic_search_icon"
-                android:tint="@color/white" />
+                app:tint="@color/white" />
 
         </LinearLayout>
 
