--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -23,10 +23,16 @@
     <color name="white">#FFF</color>
 
     <color name="dark_purple">#7c74b6</color>
-    <color name="dark_pink">#d25a95</color>
-    <color name="light_pink">#FBCCE0</color>
     <color name="light_purple">#D0CAFB</color>
     <color name="white_purple">#D0CAFB</color>
+
+
+    <color name="light_violet">#CEC0D7</color>
+    <color name="dark_violet">#b69fcc</color>
+
+    <color name="dark_pink">#d25a95</color>
+    <color name="light_pink">#FBCCE0</color>
+
     <color name="black">#272727</color>
 
 
