--- a/app/app/src/main/res/drawable/gold_currency_item_model.xml
+++ b/app/app/src/main/res/drawable/gold_currency_item_model.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/dark_purple"/>
+            <solid android:color="@color/dark_violet"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
