--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorAccent">#9C27B0</color>
 
 
+    <color name="dark_green">#02B133</color>
     <color name="green">#0EC37A</color>
     <color name="light_green">#9FF6D3</color>
 
