--- a/app/app/src/main/res/layout/activity_all_currency.xml
+++ b/app/app/src/main/res/layout/activity_all_currency.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,8 +17,7 @@
             android:background="@color/colorPrimaryDark"
             android:elevation="5dp"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toTopOf="parent">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/back"
@@ -38,15 +37,58 @@
                 android:textAppearance="@style/vazir_font"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
+
         </LinearLayout>
 
+        <LinearLayout
+            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.33"
+                android:gravity="center"
+                android:text="@string/indicator"
+                android:textAppearance="@style/vazir_font"
+                android:textColor="@color/dark_blue"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.33"
+                android:gravity="center"
+                android:text="@string/price"
+                android:textAppearance="@style/vazir_font"
+                android:textColor="@color/dark_blue"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.33"
+                android:gravity="center"
+                android:text="@string/date"
+                android:textAppearance="@style/vazir_font"
+                android:textColor="@color/dark_blue"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:background="@color/light_gray"
+            android:layout_width="match_parent"
+            android:layout_height="2.5dp"/>
         <androidx.recyclerview.widget.RecyclerView
+            android:overScrollMode="never"
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
-            android:paddingTop="10dp"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            android:paddingTop="10dp" />
+
 
     </LinearLayout>
 </layout>
