--- a/app/app/src/main/res/layout/stock_best_stock_item_model.xml
+++ b/app/app/src/main/res/layout/stock_best_stock_item_model.xml
@@ -35,6 +35,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:layoutDirection="ltr"
             android:id="@+id/percentage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
