--- a/app/app/src/main/res/layout/fragment_main_stock.xml
+++ b/app/app/src/main/res/layout/fragment_main_stock.xml
@@ -136,6 +136,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/supervisor_message"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="5dp"
