--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorAccent">#9C27B0</color>
 
 
-    <color name="dark_green">#02B133</color>
+    <color name="dark_green">#018F29</color>
     <color name="green">#0EC37A</color>
     <color name="light_green">#9FF6D3</color>
 
@@ -28,8 +28,8 @@
     <color name="white_purple">#D0CAFB</color>
 
 
-    <color name="light_violet">#CEC0D7</color>
-    <color name="dark_violet">#b69fcc</color>
+    <color name="light_violet">#e6e7e8</color>
+    <color name="dark_violet">#cfc6db</color>
 
     <color name="dark_pink">#d25a95</color>
     <color name="light_pink">#FBCCE0</color>
