--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -28,7 +28,7 @@
     <color name="white_purple">#D0CAFB</color>
 
 
-    <color name="light_violet">#e6e7e8</color>
+    <color name="light_violet">#f1eff7</color>
     <color name="dark_violet">#cfc6db</color>
 
     <color name="dark_pink">#d25a95</color>
