--- a/app/app/src/main/res/layout/fragment_main_stock.xml
+++ b/app/app/src/main/res/layout/fragment_main_stock.xml
@@ -26,6 +26,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                android:visibility="invisible"
                 android:id="@+id/title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -38,17 +39,39 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/search"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:background="@drawable/circular_ripple_pink_back"
-                android:padding="10dp"
-                android:src="@drawable/ic_search_icon"
-                android:theme="@style/SearchViewStyle"
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:elevation="5dp"
+                android:orientation="horizontal"
+                android:paddingStart="10dp"
+                android:paddingEnd="30dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/search"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:background="@drawable/circular_ripple_pink_back"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_search_icon"
+                    android:theme="@style/SearchViewStyle" />
+
+                <TextView
+                    android:textSize="20sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/search"
+                    android:textAppearance="@style/vazir_font"
+                    android:textColor="@color/light_purple" />
+
+            </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -207,7 +230,6 @@
                         android:fadingEdgeLength="30dp"
                         android:overScrollMode="never"
                         android:paddingTop="10dp"
-                        android:paddingBottom="20dp"
                         android:requiresFadingEdge="vertical"
                         app:layout_constraintTop_toBottomOf="@+id/best_technical_line" />
 
@@ -269,7 +291,6 @@
                         android:fadingEdgeLength="30dp"
                         android:overScrollMode="never"
                         android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
                         android:requiresFadingEdge="vertical"
                         app:layout_constraintTop_toBottomOf="@+id/best_fundamental_line" />
 
