--- a/app/app/src/main/res/xml/profile_motion.xml
+++ b/app/app/src/main/res/xml/profile_motion.xml
@@ -20,8 +20,7 @@
 
     <ConstraintSet android:id="@+id/starting_set">
 
-        <Constraint
-            android:id="@+id/avatarHolder"
+        <Constraint android:id="@+id/avatarHolder"
             android:layout_width="140dp"
             android:layout_height="140dp"
             android:layout_marginTop="10dp"
@@ -29,17 +28,28 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Constraint
-            android:id="@+id/infoHolder"
-            android:layout_width="match_parent"
+        <Constraint android:id="@+id/name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="30dp"
-            android:alpha="1"
-            app:layout_constraintTop_toBottomOf="@+id/profileBanner" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/avatarHolder" />
 
+
+        <Constraint android:id="@+id/expire"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/name" />
+
+
+        <Constraint android:id="@+id/profileBanner"
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:layout_marginTop="120dp"
+            android:alpha="1"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Constraint
             android:id="@+id/content"
@@ -50,45 +60,18 @@
             app:layout_constraintTop_toBottomOf="@+id/profileBanner" />
 
 
-        <Constraint
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/avatarHolder" />
-
-
-        <Constraint
-            android:id="@+id/expire"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name" />
-
-
-        <Constraint
-            android:id="@+id/profileBanner"
-            android:layout_width="match_parent"
-            android:layout_height="170dp"
-            android:layout_marginTop="120dp"
-            android:alpha="1"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
     </ConstraintSet>
 
 
     <ConstraintSet android:id="@+id/ending_set">
 
         <Constraint
-            android:scaleY="0.85"
-            android:scaleX="0.85"
             android:id="@+id/avatarHolder"
             android:layout_width="140dp"
             android:layout_height="140dp"
             android:layout_marginTop="10dp"
+            android:scaleX="0.85"
+            android:scaleY="0.85"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -98,39 +81,27 @@
             android:layout_height="0dp"
             android:layout_marginTop="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/avatarHolder" />
+
+
 
 
         <Constraint
-            android:id="@+id/infoHolder"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="30dp"
-            android:alpha="0"
-            android:scaleX="0.3"
-            android:scaleY="0.3"
-            app:layout_constraintTop_toBottomOf="@+id/profileBanner"
-            app:pivotAnchor="parent" />
-
-
-        <Constraint
+            android:layout_marginTop="30dp"
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             app:layout_constraintRight_toLeftOf="@+id/avatarHolder"
-            app:layout_constraintTop_toBottomOf="@+id/menu" />
+            app:layout_constraintTop_toTopOf="@+id/avatarHolder" />
 
 
         <Constraint
-            android:layout_marginTop="10dp"
             android:id="@+id/expire"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintRight_toLeftOf="@+id/avatarHolder"
             app:layout_constraintTop_toBottomOf="@+id/name" />
 
