--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -23,7 +23,8 @@
     <color name="white_gray">#FAFAFA</color>
     <color name="white">#FFF</color>
 
-    <color name="dark_purple">#7c74b6</color>
+    <color name="dark_purple">#514A8C</color>
+    <color name="medium_purple">#433B8C</color>
     <color name="light_purple">#D0CAFB</color>
     <color name="white_purple">#D0CAFB</color>
 
