--- a/app/app/src/main/res/layout/fragment_analysis_category.xml
+++ b/app/app/src/main/res/layout/fragment_analysis_category.xml
@@ -1,70 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/motionLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        app:layoutDescription="@xml/news_motion"
         tools:context=".main.news.AnalysisCategoryFragment">
 
-        <LinearLayout
+
+
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:background="#E6E6E6"
+            android:elevation="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tabSelectedTextColor="@color/colorPrimaryDark"
+            app:tabTextAppearance="@style/vazir_font"
+            app:tabTextColor="@color/gray" />
 
-            <TextView
-                android:id="@+id/technical"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:background="@drawable/analysis_category_ripple"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="تکنیکال"
-                android:textAppearance="@style/vazir_font"
-                android:textColor="@color/gray"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/fundamental"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:background="@drawable/analysis_category_ripple"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="بنیادی"
-                android:textAppearance="@style/vazir_font"
-                android:textColor="@color/gray"
-                android:textSize="18sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
+        <androidx.viewpager2.widget.ViewPager2
+            android:elevation="5dp"
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
 
-            <LinearLayout
-                android:id="@+id/technical_line"
-                android:layout_width="0dp"
-                android:layout_height="2.5dp"
-                android:layout_weight="0.5"
-                android:background="@color/colorAccent"
-                android:orientation="vertical" />
-
-            <LinearLayout
-                android:visibility="invisible"
-                android:id="@+id/fundamental_line"
-                android:layout_width="0dp"
-                android:layout_height="2.5dp"
-                android:layout_weight="0.5"
-                android:background="@color/colorAccent"
-                android:orientation="vertical" />
-
-        </LinearLayout>
-
-
-    </LinearLayout>
+    </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
