--- a/app/app/src/main/res/layout/news_recycler_model.xml
+++ b/app/app/src/main/res/layout/news_recycler_model.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,86 +9,97 @@
     android:background="@drawable/main_icon_background"
     android:elevation="5dp"
     android:layoutDirection="rtl"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="10dp">
 
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:scaleType="centerCrop"
-        android:src="@color/black" />
-
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.6"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textAppearance="@style/vazir_font"
-            android:textColor="@color/black" />
-
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:ellipsize="end"
-            android:maxLines="3"
-            android:textAppearance="@style/vazir_font"
-            android:textColor="@color/gray"
-            android:textSize="13sp" />
-
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:scaleType="centerCrop"
+            android:src="@color/black" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="1.5dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="8dp"
-            android:alpha="0.5"
-            android:background="@color/gray" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_weight="0.6"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/source"
-                android:layout_width="0dp"
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:layout_weight="0.8"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textAppearance="@style/vazir_font"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:ellipsize="end"
+                android:maxLines="3"
+                android:textAppearance="@style/vazir_font"
+                android:textColor="@color/gray"
                 android:textSize="13sp" />
 
             <TextView
-                android:id="@+id/date"
+                android:id="@+id/tags"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:gravity="end"
+                android:layout_margin="5dp"
                 android:textAppearance="@style/vazir_font"
-                android:textColor="@color/colorAccent"
-                android:textSize="13sp" />
+                android:textColor="@color/blue"
+                android:textSize="14sp" />
 
         </LinearLayout>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_margin="10dp"
+        android:alpha="0.5"
+        android:background="@color/gray" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:gravity="right"
+            android:layoutDirection="ltr"
+            android:id="@+id/source"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_weight="0.8"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textAppearance="@style/vazir_font"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="13sp" />
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:gravity="end"
+            android:textAppearance="@style/vazir_font"
+            android:textColor="@color/colorAccent"
+            android:textSize="13sp" />
 
     </LinearLayout>
 
