--- a/app/app/src/main/res/layout/digital_currency_item_model.xml
+++ b/app/app/src/main/res/layout/digital_currency_item_model.xml
@@ -59,10 +59,11 @@
                 android:textSize="16sp" />
 
             <TextView
+                android:layoutDirection="ltr"
                 android:id="@+id/price_dollar_change"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
                 android:textAppearance="@style/vazir_font"
                 android:textSize="16sp" />
 
@@ -92,10 +93,11 @@
                 android:textSize="16sp" />
 
             <TextView
+                android:layoutDirection="ltr"
                 android:id="@+id/price_rial_change"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
                 android:textAppearance="@style/vazir_font"
                 android:textSize="16sp" />
 
