--- a/app/app/src/main/res/layout/fragment_analysis_category.xml
+++ b/app/app/src/main/res/layout/fragment_analysis_category.xml
@@ -12,8 +12,6 @@
         tools:context=".main.news.AnalysisCategoryFragment">
 
 
-
-
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
@@ -29,6 +27,7 @@
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:elevation="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
 
