--- a/app/app/src/main/res/layout/fragment_constant_income.xml
+++ b/app/app/src/main/res/layout/fragment_constant_income.xml
@@ -11,14 +11,12 @@
         android:orientation="vertical"
         tools:context=".main.home.desk.constant.ConstantIncomeFragment">
 
-
-
         <LinearLayout
-            android:layout_marginTop="15dp"
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="10dp"
             android:background="@color/colorPrimaryDark"
             android:elevation="5dp"
@@ -27,7 +25,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
+                android:layout_weight="0.4"
                 android:gravity="start"
                 android:padding="10dp"
                 android:text="@string/desk_cash_name"
@@ -36,24 +34,26 @@
                 android:textSize="13sp" />
 
             <TextView
+                android:id="@+id/profit_filter"
                 android:layout_width="0dp"
+                android:layout_weight="0.32"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.3"
-                android:gravity="start"
+                android:gravity="center"
                 android:padding="10dp"
-                android:text="@string/average_profit"
+                android:text="بازدهی ماهانه"
                 android:textAppearance="@style/vazir_font"
                 android:textColor="@color/white"
                 android:textSize="13sp" />
 
 
             <TextView
+                android:id="@+id/risk_filter"
                 android:layout_width="0dp"
+                android:layout_weight="0.2"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.3"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="@string/risk_criteria"
+                android:text="بتا صندوق"
                 android:textAppearance="@style/vazir_font"
                 android:textColor="@color/white"
                 android:textSize="13sp" />
