--- a/app/app/src/main/res/layout/fragment_constant_income.xml
+++ b/app/app/src/main/res/layout/fragment_constant_income.xml
@@ -26,7 +26,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.4"
-                android:gravity="start"
+                android:gravity="center"
                 android:padding="10dp"
                 android:text="@string/desk_cash_name"
                 android:textAppearance="@style/vazir_font"
