--- a/app/app/src/main/res/layout/constant_income_item_model.xml
+++ b/app/app/src/main/res/layout/constant_income_item_model.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.4"
-        android:gravity="start"
+        android:gravity="center"
         android:padding="10dp"
         android:textAppearance="@style/vazir_font"
         android:textColor="@color/dark_blue"
