--- a/app/app/src/main/res/layout/gold_currency_recycler_item_model.xml
+++ b/app/app/src/main/res/layout/gold_currency_recycler_item_model.xml
@@ -21,7 +21,6 @@
         android:textColor="@color/dark_blue"
         android:textSize="14sp" />
 
-
     <LinearLayout
         android:paddingEnd="10dp"
         android:paddingStart="10dp"
@@ -54,14 +53,13 @@
 
     </LinearLayout>
 
-
     <TextView
         android:id="@+id/date"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@drawable/gold_currency_item_model"
         android:backgroundTint="@color/light_violet"
-        android:gravity="end"
+        android:gravity="end|center_vertical"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:paddingEnd="20dp"
