--- a/app/app/src/main/res/layout/activity_constant_income_detail.xml
+++ b/app/app/src/main/res/layout/activity_constant_income_detail.xml
@@ -37,6 +37,7 @@
                 android:layout_weight="0.9"
                 android:ellipsize="end"
                 android:gravity="end"
+                android:maxLines="1"
                 android:textAppearance="@style/vazir_font"
                 android:textColor="@color/white"
                 android:textSize="17sp" />
@@ -207,9 +208,9 @@
                                 <TextView
                                     android:id="@+id/investment_manager"
                                     android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
                                     android:layout_weight="0.6"
                                     android:gravity="end"
-                                    android:layout_height="wrap_content"
                                     android:textAppearance="@style/vazir_font"
                                     android:textColor="@color/black"
                                     android:textSize="13sp" />
@@ -446,11 +447,11 @@
                                     android:textSize="14sp" />
 
                                 <TextView
-                                    android:layout_weight="0.6"
                                     android:id="@+id/number_investor1"
                                     android:layout_width="0dp"
-                                    android:gravity="center"
                                     android:layout_height="wrap_content"
+                                    android:layout_weight="0.6"
+                                    android:gravity="center"
                                     android:textAppearance="@style/vazir_font"
                                     android:textColor="@color/black"
                                     android:textSize="13sp" />
@@ -566,11 +567,11 @@
                                     android:textSize="14sp" />
 
                                 <TextView
-                                    android:layout_weight="0.5"
                                     android:id="@+id/number_of_investor2"
                                     android:layout_width="0dp"
-                                    android:gravity="center"
                                     android:layout_height="wrap_content"
+                                    android:layout_weight="0.5"
+                                    android:gravity="center"
                                     android:textAppearance="@style/vazir_font"
                                     android:textColor="@color/black"
                                     android:textSize="13sp" />
@@ -786,9 +787,9 @@
                             </LinearLayout>
 
                             <LinearLayout
-                                android:background="@color/light_violet"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:background="@color/light_violet"
                                 android:orientation="horizontal"
                                 android:padding="10dp">
 
@@ -838,9 +839,9 @@
                             </LinearLayout>
 
                             <LinearLayout
-                                android:background="@color/light_violet"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:background="@color/light_violet"
                                 android:orientation="horizontal"
                                 android:padding="10dp">
 
@@ -889,9 +890,9 @@
                             </LinearLayout>
 
                             <LinearLayout
-                                android:background="@color/light_violet"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:background="@color/light_violet"
                                 android:orientation="horizontal"
                                 android:padding="10dp">
 
@@ -932,13 +933,15 @@
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="18sp" />
 
+                <LinearLayout
+                    android:layout_margin="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp">
                 <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/pieChart"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="20dp" />
-
+                    android:layout_height="300dp" />
+                </LinearLayout>
 
             </LinearLayout>
         </ScrollView>
