--- a/app/app/src/main/res/layout/fragment_constant_income.xml
+++ b/app/app/src/main/res/layout/fragment_constant_income.xml
@@ -33,30 +33,58 @@
                 android:textColor="@color/white"
                 android:textSize="13sp" />
 
-            <TextView
+            <LinearLayout
+                android:gravity="center"
+                android:padding="10dp"
+                android:clipToPadding="false"
                 android:id="@+id/profit_filter"
                 android:layout_width="0dp"
-                android:layout_weight="0.32"
+                android:layout_weight="0.4"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/profit_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_arrow_drop_up_24" />
+
+                <TextView
+                    android:id="@+id/profit_filter_txt"
+                    android:layout_marginStart="3dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="بازدهی ماهانه"
+                    android:textAppearance="@style/vazir_font"
+                    android:textColor="@color/white"
+                    android:textSize="13sp" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:padding="10dp"
-                android:text="بازدهی ماهانه"
-                android:textAppearance="@style/vazir_font"
-                android:textColor="@color/white"
-                android:textSize="13sp" />
-
-
-            <TextView
                 android:id="@+id/risk_filter"
-                android:layout_width="0dp"
-                android:layout_weight="0.2"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="بتا صندوق"
-                android:textAppearance="@style/vazir_font"
-                android:textColor="@color/white"
-                android:textSize="13sp" />
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/risk_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_baseline_arrow_drop_up_24" />
+
+                <TextView
+                    android:id="@+id/risk_filter_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                   android:layout_marginStart="3dp"
+                    android:text="بتا صندوق"
+                    android:textAppearance="@style/vazir_font"
+                    android:textColor="@color/white"
+                    android:textSize="13sp" />
+            </LinearLayout>
 
 
         </LinearLayout>
